# distributed-systems

./: .gitignore  README.md
map-reduce/: .clang-format  CMakeLists.txt  README.md  build.sh  conanfile.py
map-reduce-rust/: Cargo.toml
map-reduce-rust/src/: Datastore.rs  main.rs  map.rs  master.rs
map-reduce/examples/: CMakeLists.txt
map-reduce/examples/wordcount/: CMakeLists.txt  Datastore.cpp  main.cpp  wc.cpp  wc.h
map-reduce/examples/wordcount/datastore/: CMakeLists.txt  Datastore.cpp  Datastore.h
map-reduce/examples/wordcount/datastore/proto/: datastore.proto
map-reduce/include/MapReduce/: Job.h  Logger.h  Map.h
map-reduce/src/: CMakeLists.txt  Job.cpp
map-reduce/src/include/MapReduce/: IMap.h  IReduce.h  Job.h  Reduce.h
